# motionbids

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  example.py  fix_tests.py  mkdocs.yml  paper.bib  paper.md  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docs/: class-reference.md  examples.md  index.md  motivation.md  schema-fields.md  workflow.md
docs/examples/: index.md  movella-xdf.md  vicon-c3d.md
docs/getting-started/: installation.md  quickstart.md
docs/user-guide/: bids-fields.md  exporting.md
examples/: from_c3d_vicon.py  from_xdf_movella.py
examples/data/: EXAMPLE01.xdf  example_movella.xdf  example_vicon.c3d
motion2bids/: __init__.py  datamodel.py  exporter.py  schema_utils.py
motionbids/: __init__.py  bids_constants.py  channel.py  datamodel.py  datamodel_dynamic.py  datautils.py  exporter.py  schema_utils.py  validator.py
tests/: test_datamodel.py  test_exporter.py  test_validator.py
