[project]
name = "motionbids"
version = "0.4.0"
description = "Lightweight converter for motion data to BIDS format"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Julius Welzel", email = "julius.welzel@gmail.com"}
]
keywords = [
    "BIDS",
    "motion capture",
    "neuroscience",
    "MoBI",
    "IMU",
    "kinematics",
    "data standardization",
    "reproducibility",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "bidsschematools>=0.8.0",
    "dataclasses-json>=0.6.0",
    "ipykernel>=7.1.0",
    "numpy>=1.20.0",
    "pip>=26.1.2",
]

[project.urls]
Homepage = "https://github.com/JuliusWelzel/motionbids"
Documentation = "https://juliuswelzel.github.io/motionbids/"
Repository = "https://github.com/JuliusWelzel/motionbids"
Issues = "https://github.com/JuliusWelzel/motionbids/issues"
Changelog = "https://github.com/JuliusWelzel/motionbids/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ipykernel>=6.29.5",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
]
examples = [
    "ezc3d>=1.7.0",
    "matplotlib>=3.10.9",
    "pandas>=2.3.3",
    "pyxdf>=1.17.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["motionbids"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
